# HANDWRITE_PLAIN_TEXT

./: .gitignore  LICENSE-handright.txt  README.md  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.cli.ts  vitest.config.ts
agent-harness/: HANDWRITE.md  setup.py
agent-harness/cli_anything/handwrite/: README.md  __init__.py  __main__.py  handwrite_cli.py
agent-harness/cli_anything/handwrite/core/: model.py  params.py  project.py  render.py  session.py
agent-harness/cli_anything/handwrite/scripts/: render_backend.mjs
agent-harness/cli_anything/handwrite/skills/: SKILL.md
agent-harness/cli_anything/handwrite/tests/: TEST.md  conftest.py  test_core.py  (+1 more)
agent-harness/cli_src/: cli_render_entry.ts  electron-stub.js
src/: main.py  palette.py
src/app/: editor_window.py  preview_window.py  render_worker.py  state.py
src/config/: paths.py  persistence.py  settings.py
src/fonts/: font_catalog.py
src/main/: fonts.ts  index.ts  ipc.ts  logger.ts  paths.ts  persistence.ts  premium.ts
src/main/render/: fontCache.ts  layout.ts  perturb.ts  rand.ts  renderer.ts
src/preload/: index.ts
src/premium/: interfaces.py
src/render/: font_cache.py  layout.py  perturb.py  renderer.py
src/renderer/: index.html
src/renderer/src/: env.d.ts  main.ts  router.ts  styles.css
src/shared/: palette.ts  settings.ts  types.ts
src/utils/: logger.py
tests/: layout.test.ts  rangeModel.test.ts  smoke_gui.py  test_layout.py  test_range_model.py
(+6 files in other folders)
