[project]
name = "handwrite-plain-text"
version = "1.0.0"
description = "Modular handwritten-text generator with decoupled editor/preview windows"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.9.0",
    "pillow>=10.0.0",
    "toml>=0.10.2",
]

[dependency-groups]
test = ["pytest>=8.0.0"]

[tool.uv]
package = false
